--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -31,10 +31,10 @@
                                             <select class="form-control" 
                                                 (change)="locationSelected($event,device)"
                                                 [(ngModel)]="device.location">
-                                                <option selected  > -- Select your Device Location --
+                                                <option selected  > -- Select Device Location --
                                                 </option>
                                                 <option *ngFor="let location of getLocationList() ; let i = index"
-                                                    [value]="location.name" 
+                                                     
                                                     [selected]="device.location"
                                                     [disabled]="location.isDisabled">
                                                     {{location.name}}
