--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="row collapsible" [@collapse]="!gameBoardCollapsed" id="gameManagementBoard">
-            <div class="col-lg-12"><h4 class="text-center pt-lg-5 pt-3">{{selectedGameMode}}</h4></div> 
+            <div class="col-lg-12"><h4 class="text-center pt-3">{{selectedGameMode}}</h4></div> 
 
             <div class="col-lg-12">
                 <div class="text-center pt-lg-5 pt-3">
