--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -26,7 +26,7 @@
                             <div *ngFor="let device of devices; let i = index" class="card user-card">
 
                                 <div class="card-header">
-                                    <div *ngIf="mode == 'createMode'">
+                                    <div *ngIf="mode !== 'activeNodes'">
                                         <h4>Location:
                                             <select class="form-control" 
                                                 (change)="locationSelected($event,device)"
@@ -65,6 +65,23 @@
                                                 class="custom-control-input" [id]="'querySwitch-' + i">
                                             <label class="custom-control-label" [for]="'querySwitch-' + i">Player
                                                 Query</label>
+                                        </div>
+                                    </div>
+
+
+
+                                    <div *ngIf="mode == 'adminNodes'" id="makeActive" class="form-group">
+                                        <div class="custom-control custom-switch">
+                                            <input (click)="makeActive(device)" type="checkbox"
+                                                class="custom-control-input" [id]="'makeActive-' + i">
+                                            <label class="custom-control-label" [for]="'makeActive-' + i"> Make Node Active In Game</label>
+                                        </div>
+                                    </div>
+                                    <div *ngIf="mode == 'activeNodes'" id="makeAdmin" class="form-group">
+                                        <div class="custom-control custom-switch">
+                                            <input (click)="makeAdmin(device)" type="checkbox"
+                                                class="custom-control-input" [id]="'makeAdmin-' + i">
+                                            <label class="custom-control-label" [for]="'makeAdmin-' + i">Make Node Admin</label>
                                         </div>
                                     </div>
 
@@ -220,6 +237,8 @@
             <div class="modal-footer">
                 <button *ngIf="mode == 'activeNodes'" type="button" class="btn btn-danger"
                     (click)="saveNodeConfigs()">END GAME</button>
+                    <button *ngIf="mode == 'activeNodes'" type="button" class="btn btn-warning"
+                    (click)="saveNodeConfigs()">PAUSE GAME</button>
             </div>
         </div>
     </div>
