--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -1,7 +1,7 @@
 
 <div class="events_area">
     <div class="container">
-        <div *ngIf="!selectedGameMode" class="row justify-content-center">
+        <div *ngIf="!gameBoardCollapsed" class="row justify-content-center">
             <div class="col-lg-5">
                 <div class="main_title">
                     <h4>To Being Select Game Mode</h4>
@@ -10,6 +10,8 @@
                         <option [value]="gameMode.description" *ngFor="let gameMode of gameModes">
                             {{gameMode.description}}</option>
                     </select>
+                    <br>
+                    <button type="button" class="bg-primary btn" (click)="startGame()">START GAME</button>
                 </div>
             </div>
         </div>
@@ -17,7 +19,7 @@
             <div class="col-lg-12"><h4 class="text-center pt-3">{{selectedGameMode}}</h4></div> 
 
             <div class="col-lg-12">
-                <div class="text-center pt-lg-5 pt-3">
+                <div class="text-center pt-3">
                     <div id="activeInGameNodes">
                         <app-device-list [config]="activeNodes" (nodeConfigs)="nodeConfigs($event)"></app-device-list>
                         <!-- //(modalClose)="closeModal($event)" [config]="deviceListConfigs" (nodeConfigs)="nodeConfigs($event)" -->
@@ -26,11 +28,10 @@
             </div>
 
             <div class="col-lg-12">
-                <div class="text-center pt-lg-5 pt-3">
+                <div class="text-center pt-3">
                     <div id="gameAdminNodes"> 
                         <app-device-list [config]="adminNodes" (nodeConfigs)="nodeConfigs($event)">
                         </app-device-list>
-
                     </div>
                 </div>
             </div>
