--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -48,10 +48,10 @@
                                     <div *ngIf="mode == 'activeNodes'">
                                         {{ device.location }}
                                     </div>
-                                    <div *ngIf="mode == 'adminNodes'">
+                                    <!-- <div *ngIf="mode == 'adminNodes'">
                                         <h7>Address: {{device.address.slice(12,14)}} {{device.address.slice(14,16)}}
                                         </h7>
-                                    </div>
+                                    </div> -->
                                     <!-- <h7>Device ID: {{device.id}}</h7> -->
                                 </div>
 
