--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -151,7 +151,7 @@
                                                     <label for="armTime">Arm Time</label>
                                                     <input class="form-control-range" id="armTime" type="range" min="0"
                                                         max="11" [value]="getTimeIndex(device.bomb.arm_time)" step="1"
-                                                        (input)="armTime(device,$event.target.value)">
+                                                        (mouseup)="armTime(device,$event.target.value)">
                                                     {{convertTime(device.bomb.arm_time)}}
                                                 </div>
                                                 <hr>
@@ -159,7 +159,7 @@
                                                     <label for="blastTime">Fuse Timer</label>
                                                     <input class="form-control-range" id="blastTime" type="range"
                                                         min="0" max="32" [value]="getTimeIndex(device.bomb.bomb_time)"
-                                                        step="1" (input)="bombTime(device,$event.target.value)">
+                                                        step="1" (mouseup)="bombTime(device,$event.target.value)">
                                                     {{convertTime(device.bomb.bomb_time)}}
                                                 </div>
                                                 <hr>
@@ -167,7 +167,7 @@
                                                     <label for="difuseTime">Diffuse Time</label>
                                                     <input class="form-control-range" id="difuseTime" type="range"
                                                         min="0" max="11" [value]="getTimeIndex(device.bomb.diff_time)"
-                                                        step="1" (input)="difuseTime(device,$event.target.value)">
+                                                        step="1" (mouseup)="difuseTime(device,$event.target.value)">
                                                     {{convertTime(device.bomb.diff_time)}}
                                                 </div>
                                             </div>
@@ -189,7 +189,7 @@
                                                     <label for="captime">Stabilization Time</label>
                                                     <input class="form-control-range" id="captime" type="range" min="0"
                                                         max="32" [value]="getTimeIndex(device.capture.cap_time)"
-                                                        step="1" (input)="capTime(device,$event.target.value)">
+                                                        step="1" (mouseup)="capTime(device,$event.target.value)">
                                                     {{convertTime(device.capture.cap_time)}}
                                                 </div>
                                                 <hr>
@@ -197,7 +197,7 @@
                                                     <label for="capasst">Capture Assist</label>
                                                     <input class="form-control-range" id="capasst" type="range" min="0"
                                                         max="8" [value]="getPercIndex(device.capture.cap_asst)" step="1"
-                                                        (input)="capasst(device,$event.target.value)">
+                                                        (mouseup)="capasst(device,$event.target.value)">
                                                     {{convertPerc(device.capture.cap_asst)}} %
                                                 </div>
                                                 <hr>
@@ -206,7 +206,7 @@
                                                     <input class="form-control-range" id="pointScale" type="range"
                                                         min="0" max="11"
                                                         [value]="getScaleIndex(device.capture.point_scale)" step="1"
-                                                        (input)="pointScale(device,$event.target.value)">
+                                                        (mouseup)="pointScale(device,$event.target.value)">
                                                     {{convertPointScale(device.capture.point_scale)}}
                                                 </div>
                                                 <hr>
